# timewarrior-aggregate

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  tagset.rs  twentry.rs  twinput.rs  workgroup.rs
