[package]
name = "timewarrior-aggregate"
version = "0.1.0"
authors = ["Ramakrishnan G <rameshg87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.4"
json = "0.12.4"
chrono = "0.3.0"
isatty = "0.1.9"

[[bin]]
name = "aggregate"
path = "src/main.rs"
